@@ -199,13 +199,13 @@ ext {
                     version:micronautGcpVersion,
                     group:'io.micronaut.gcp',
                     name:'micronaut-gcp-common',
-                    modules:['micronaut-gcp-tracing', 'micronaut-gcp-function-http', 'micronaut-gcp-function', 'micronaut-gcp-http-client']
+                    modules:['micronaut-gcp-tracing', 'micronaut-gcp-function-http', 'micronaut-gcp-function-http-test', 'micronaut-gcp-function', 'micronaut-gcp-http-client']
             ],
             'micronaut.azure': [
                     version:micronautAzureVersion,
                     group:'io.micronaut.azure',
                     name:'micronaut-azure-function',
-                    modules:['micronaut-azure-function-http']
+                    modules:['micronaut-azure-function', 'micronaut-azure-function-http', 'micronaut-azure-function-http-test']
             ],
             'azure.function': [
                     version:'1.3.1',
@@ -226,7 +226,7 @@ ext {
                     version:micronautAwsVersion,
                     group:'io.micronaut.aws',
                     name:'micronaut-function-aws-api-proxy',
-                    modules: ['micronaut-aws-common','micronaut-function-aws','micronaut-function-aws-custom-runtime', 'micronaut-function-aws-alexa', 'micronaut-aws-alexa-httpserver']
+                    modules: ['micronaut-aws-common', 'micronaut-function-aws-api-proxy-test', 'micronaut-function-aws','micronaut-function-aws-custom-runtime', 'micronaut-function-aws-alexa', 'micronaut-aws-alexa-httpserver', 'micronaut-aws-parameter-store', 'micronaut-aws-sdk-v2', 'micronaut-function-client-aws']
             ],
             'micronaut.kotlin': [
                     version:micronautKotlinVersion,
@@ -247,8 +247,14 @@ ext {
             ],
             'micronaut.openapi': [
                     version:micronautOpenApiVersion,
-                    group:'io.micronaut.configuration',
+                    group:'io.micronaut.openapi',
                     name:'micronaut-openapi'
+            ],
+            // TODO Deprecated: Remove in the next major version
+            'micronaut.openapi.old': [
+                    version: micronautOldOpenApiVersion,
+                    group: 'io.micronaut.configuration',
+                    name: 'micronaut-openapi'
             ],
             kafka                      : [
                     version: kafkaVersion,
@@ -591,6 +597,12 @@ ext {
                     group  : 'io.micronaut.acme',
                     name   : 'micronaut-acme'
             ],
+            'dekorate': [
+                    version: dekorateVersion,
+                    group  : 'io.dekorate',
+                    name   : 'dekorate-project',
+                    modules: ['jaeger-annotations', 'knative-annotations', 'kubernetes-annotations',  'openshift-annotations', 'prometheus-annotations', 'servicecatalog-annotations']
+            ],
     ]
 
     dependencyVersion = { String name ->
@@ -688,6 +700,9 @@ subprojects { Project subproject ->
         useJUnitPlatform()
         jvmArgs '-Xmx2048m'
         systemProperty "micronaut.cloud.platform", "OTHER"
+        if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_14)) {
+            jvmArgs "--enable-preview"
+        }
     }
 
     tasks.withType(Checkstyle) {
